# ubiquus-every-nownthen

./: .env.example  .env.info  .gitignore  Dockerfile  README.md  crontab  install_scripts_as_uv_tools.sh  install_uv_tools.sh  pyproject.toml  uv_tools.txt
.deployments/k8s/: README.md  configmap-env.example.yaml  configmap-service-account.example.yaml  deployment.yaml
.github/workflows/: deploy.yml
scripts/process_sales/: .env.example  README.md  pyproject.toml
scripts/process_sales/src/: __init__.py  main.py  process_mtb_sales.py  process_sales.py  process_seven_sales.py
scripts/say_hello/: README.md  say_hello.py
